Bug 666947 - Video play button misaligned on /features page
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@91696 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/features.css
+++ b/style/covehead/features.css
@@ -386,7 +386,7 @@ img.right {
     margin: 8px 0 0 0;
 }
 
-#video-player {
+#video-player-runfield {
     width: 640px;
 }
 
